@@ -75,8 +75,6 @@ val TestDeps = Seq(
 scalaVersion := "2.13.16"
 crossScalaVersions := Seq("2.13.16", "3.3.6")
 scalacOptions ++= List("-encoding", "utf8", "-deprecation", "-feature", "-unchecked")
-// Needed for ssl-config to create self signed certificated under Java 17
-Test / javaOptions ++= List("--add-exports=java.base/sun.security.x509=ALL-UNNAMED")
 
 // Make verbose tests
 (Test / testOptions) := Seq(Tests.Argument(TestFrameworks.JUnit, "-a", "-v"))
